--- a/friends_list.ui
+++ b/friends_list.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
+    <width>425</width>
     <height>430</height>
    </rect>
   </property>
@@ -15,37 +15,38 @@
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(76, 76, 76);
-font: 12pt "Courier";</string>
+font: 12pt &quot;Courier&quot;;</string>
   </property>
   <widget class="QLabel" name="title">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>20</y>
-     <width>121</width>
-     <height>31</height>
+     <x>150</x>
+     <y>30</y>
+     <width>161</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);
-font: 14pt "Courier";</string>
+font: 20pt &quot;Times New Roman&quot;;</string>
    </property>
    <property name="text">
-    <string>MY FRIENDS</string>
+    <string>My Friend List</string>
    </property>
   </widget>
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>370</y>
+     <x>270</x>
+     <y>360</y>
      <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 13pt "Courier";
-background-color: rgb(61, 229, 229);</string>
+    <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);
+font: 13pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>Back</string>
@@ -55,14 +56,15 @@ background-color: rgb(61, 229, 229);</string>
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>370</y>
+     <y>360</y>
      <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 13pt "Courier";
-background-color: rgb(227, 201, 69);</string>
+    <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);
+font: 13pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>Delete</string>
@@ -71,15 +73,16 @@ background-color: rgb(227, 201, 69);</string>
   <widget class="QPushButton" name="requests">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>370</y>
-     <width>111</width>
+     <x>50</x>
+     <y>360</y>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 13pt &quot;Courier&quot;;
-background-color: rgb(86, 231, 115);</string>
+    <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);
+font: 13pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>Requests</string>
@@ -88,10 +91,10 @@ background-color: rgb(86, 231, 115);</string>
   <widget class="QListWidget" name="list_friends">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>50</y>
-     <width>331</width>
-     <height>271</height>
+     <x>70</x>
+     <y>80</y>
+     <width>281</width>
+     <height>211</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -101,9 +104,9 @@ background-color: rgb(86, 231, 115);</string>
   <widget class="QLineEdit" name="username_input">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>330</y>
-     <width>301</width>
+     <x>70</x>
+     <y>310</y>
+     <width>261</width>
      <height>30</height>
     </rect>
    </property>
@@ -114,8 +117,8 @@ background-color: rgb(86, 231, 115);</string>
   <widget class="QPushButton" name="add_friend">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>330</y>
+     <x>320</x>
+     <y>310</y>
      <width>31</width>
      <height>30</height>
     </rect>
