--- a/reset_password_window.ui
+++ b/reset_password_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>427</height>
+    <width>493</width>
+    <height>404</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,17 +20,21 @@ font: 12pt &quot;Courier&quot;;</string>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>50</x>
      <y>90</y>
      <width>391</width>
      <height>211</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="email_input">
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_3">
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt</string>
+      </property>
+      <property name="text">
+       <string>Email:</string>
       </property>
      </widget>
     </item>
@@ -41,20 +45,11 @@ font: 12pt &quot;Courier&quot;;</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>New Password:</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_2">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;</string>
       </property>
       <property name="text">
        <string>Username:</string>
@@ -68,13 +63,39 @@ font: 12pt &quot;Courier&quot;;</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="email_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
      <widget class="QLabel" name="label_3">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt</string>
       </property>
       <property name="text">
-       <string>Email:</string>
+       <string>New Password:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 12pt</string>
+      </property>
+      <property name="text">
+       <string>Re-enter Password:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="new_password_input_2">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
       </property>
      </widget>
     </item>
@@ -83,30 +104,32 @@ font: 12pt &quot;Courier&quot;;</string>
   <widget class="QPushButton" name="reset_button">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>110</x>
      <y>320</y>
-     <width>181</width>
+     <width>111</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(86, 231, 115);</string>
+    <string notr="true">background-color: rgb(255, 255, 255);
+font: 13pt;</string>
    </property>
    <property name="text">
-    <string>Reset</string>
+    <string>Submit</string>
    </property>
   </widget>
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>290</x>
      <y>320</y>
-     <width>191</width>
+     <width>111</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 0, 128);</string>
+    <string notr="true">background-color: rgb(255, 255, 255);
+font: 13pt;</string>
    </property>
    <property name="text">
     <string>Cancel</string>
@@ -115,18 +138,18 @@ font: 12pt &quot;Courier&quot;;</string>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>60</y>
-     <width>241</width>
-     <height>21</height>
+     <x>170</x>
+     <y>40</y>
+     <width>151</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);
-	 font: 16pt &quot;Courier&quot;;</string>
+font: 20pt &quot;Times New Roman&quot;;</string>
    </property>
    <property name="text">
-    <string>RESET YOUR PASSWORD</string>
+    <string>Reset Password</string>
    </property>
   </widget>
  </widget>
